--- a/CS162_Group37/CS162_Group37.vcxproj.filters
+++ b/CS162_Group37/CS162_Group37.vcxproj.filters
@@ -15,7 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Ant.hpp">
+    <ClCompile Include="Doodlebug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Doodlebug.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
