--- a/CS162_Group37/CS162_Group37.vcxproj
+++ b/CS162_Group37/CS162_Group37.vcxproj
@@ -19,10 +19,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ant.cpp" />
+    <ClCompile Include="board.cpp" />
     <ClCompile Include="Doodlebug.cpp" />
+    <ClCompile Include="menu.cpp" />
+    <ClCompile Include="validation.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ant.hpp" />
+    <ClInclude Include="board.hpp" />
     <ClInclude Include="Doodlebug.hpp" />
+    <ClInclude Include="menu.hpp" />
+    <ClInclude Include="validation.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
