--- a/CS162_Group37/CS162_Group37.vcxproj.filters
+++ b/CS162_Group37/CS162_Group37.vcxproj.filters
@@ -18,9 +18,33 @@
     <ClCompile Include="Doodlebug.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="board.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="validation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Doodlebug.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ant.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="board.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="menu.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="validation.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
